// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@checkup/cli normal cli output if excludePaths are provided by both the config and command line, use command line 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (4 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 988dab0635e80290c915a8729decff96

=== Metrics

Lines of Code

File type   Total       TODO 
hbs         1           0    
json        175         N/A  


"
`;

exports[`@checkup/cli normal cli output if excludePaths are provided by both the config and command line, use command line 2`] = `
"
Checkup report generated for checkup-app v0.0.0 (5 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 988dab0635e80290c915a8729decff96

=== Metrics

Lines of Code

File type   Total       TODO 
js          1           0    
json        175         N/A  


"
`;

exports[`@checkup/cli normal cli output should output checkup result 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (6 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines of Code

File type   Total       TODO 
hbs         1           0    
js          1           0    
json        175         N/A  


"
`;

exports[`@checkup/cli normal cli output should output checkup result in JSON 1`] = `
"{
  \\"meta\\": {
    \\"project\\": {
      \\"name\\": \\"checkup-app\\",
      \\"version\\": \\"0.0.0\\",
      \\"repository\\": {
        \\"totalCommits\\": 0,
        \\"totalFiles\\": 0,
        \\"age\\": \\"0 days\\",
        \\"activeDays\\": \\"0 days\\"
      }
    },
    \\"cli\\": {
      \\"configHash\\": \\"395b15f7dea0dee193db593e1c6cfb5b\\",
      \\"version\\": \\"0.0.0\\",
      \\"schema\\": 1
    },
    \\"analyzedFilesCount\\": [
      /checkup-app/.checkuprc\\",
      /checkup-app/.eslintrc.js\\",
      /checkup-app/index.hbs\\",
      /checkup-app/index.js\\",
      /checkup-app/package-lock.json\\",
      /checkup-app/package.json\\"
    ]
  },
  \\"results\\": [
    {
      \\"meta\\": {
        \\"taskName\\": \\"lines-of-code\\",
        \\"friendlyTaskName\\": \\"Lines of Code\\",
        \\"taskClassification\\": {
          \\"category\\": \\"metrics\\"
        }
      },
      \\"result\\": {
        \\"fileResults\\": [
          {
            \\"results\\": {
              \\"total\\": 1,
              \\"todo\\": 0,
              \\"block\\": 0,
              \\"blockEmpty\\": 0,
              \\"comment\\": 0,
              \\"empty\\": 0,
              \\"mixed\\": 0,
              \\"single\\": 0,
              \\"source\\": 1
            },
            \\"fileExension\\": \\"hbs\\",
            \\"errors\\": []
          },
          {
            \\"results\\": {
              \\"total\\": 1,
              \\"todo\\": 0,
              \\"block\\": 0,
              \\"blockEmpty\\": 0,
              \\"comment\\": 0,
              \\"empty\\": 0,
              \\"mixed\\": 0,
              \\"single\\": 0,
              \\"source\\": 1
            },
            \\"fileExension\\": \\"js\\",
            \\"errors\\": []
          },
          {
            \\"results\\": {
              \\"total\\": 175,
              \\"todo\\": \\"N/A\\",
              \\"block\\": \\"N/A\\",
              \\"blockEmpty\\": \\"N/A\\",
              \\"comment\\": \\"N/A\\",
              \\"empty\\": \\"N/A\\",
              \\"mixed\\": \\"N/A\\",
              \\"single\\": \\"N/A\\",
              \\"source\\": \\"N/A\\"
            },
            \\"fileExension\\": \\"json\\",
            \\"errors\\": []
          }
        ]
      }
    }
  ],
  \\"errors\\": [],
  \\"actions\\": []
}"
`;

exports[`@checkup/cli normal cli output should run a single task if the task option is specified 1`] = `
"=== Metrics

Lines of Code

File type   Total       TODO 
hbs         1           0    
js          1           0    
json        175         N/A  


"
`;

exports[`@checkup/cli normal cli output should run the tasks on the globs passed into checkup, if provided, instead of entire app 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (3 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines of Code

File type   Total       TODO 
hbs         2           0    
js          1           1    


"
`;

exports[`@checkup/cli normal cli output should run the tasks on the globs passed into checkup, if provided, instead of entire app 2`] = `
"
Checkup report generated for checkup-app v0.0.0 (9 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines of Code

File type   Total       TODO 
js          3           2    
hbs         2           0    
json        175         N/A  


"
`;

exports[`@checkup/cli normal cli output should use the config at the config path if provided 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (6 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines of Code

File type   Total       TODO 
hbs         1           0    
js          1           0    
json        175         N/A  


"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the command line 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (3 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines of Code

File type   Total       TODO 
json        175         N/A  


"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the command line 2`] = `
"
Checkup report generated for checkup-app v0.0.0 (5 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines of Code

File type   Total       TODO 
js          1           0    
json        175         N/A  


"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the config 1`] = `
"
Checkup report generated for checkup-app v0.0.0 (5 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 988dab0635e80290c915a8729decff96

=== Metrics

Lines of Code

File type   Total       TODO 
js          1           0    
json        175         N/A  


"
`;

exports[`@checkup/cli normal cli output should use the excludePaths provided by the config 2`] = `
"
Checkup report generated for checkup-app v0.0.0 (6 files analyzed)

This project is 0 days old, with 0 days active days, 0 commits and 0 files.

checkup v0.0.0
config 395b15f7dea0dee193db593e1c6cfb5b

=== Metrics

Lines of Code

File type   Total       TODO 
hbs         1           0    
js          1           0    
json        175         N/A  


"
`;
